@@ -1,8 +1,8 @@
 Package: DPQ
 Title: Density, Probability, Quantile ('DPQ') Computations
-Version: 0.5-4
-Date: 2023-04-12
-VersionNote: Last CRAN: 0.5-3 on 2022-12-01
+Version: 0.5-5
+Date: 2023-06-23
+VersionNote: Last CRAN: 0.5-4 on 2023-04-12
 Authors@R: c(person("Martin","Maechler", role=c("aut","cre"),
                     email="maechler@stat.math.ethz.ch", comment = c(ORCID = "0000-0002-8685-9910"))
   , person("Morten",   "Welinder",    role = "ctb", comment = "pgamma C code, see PR#7307, Jan. 2005; further pdhyper()")
